可以加载选中的provider
